--- a/package.json
+++ b/package.json
@@ -11,26 +11,30 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
     "@types/react-input-mask": "^3.0.5",
     "@types/react-router-hash-link": "^2.4.9",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
-    "eslint": "^8.34.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.4",
-    "react-router-dom": "^6.22.3"
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "globals": "^15.2.0",
+    "prettier": "^2.8.8",
+    "react-router-dom": "^6.22.3",
+    "typescript": "^5.2.2",
+    "typescript-eslint": "^7.9.0",
+    "vite": "^5.2.0"
   }
 }
