--- a/.hintrc
+++ b/.hintrc
@@ -3,6 +3,13 @@
     "development"
   ],
   "hints": {
-    "axe/structure": "off"
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "user-select"
+        ]
+      }
+    ]
   }
 }
