--- a/package.json
+++ b/package.json
@@ -10,12 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.1",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.6.8",
+    "crypto-js": "^4.2.0",
+    "fortawesome": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@types/node": "^20.12.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-input-mask": "^3.0.5",
@@ -32,7 +44,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "globals": "^15.2.0",
     "prettier": "^2.8.8",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.23.1",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.9.0",
     "vite": "^5.2.0"
